@@ -1,3 +1,10 @@
+2005-11-14  Boris Kolpackov  <boris@kolpackov.net>
+
+	* read.c (construct_include_path): Set the .INCLUDE_DIRS special
+	variable.
+	* doc/make.texi (Special Variables): Document .INCLUDE_DIRS.
+	* NEWS: Add .INCLUDE_DIRS to the list of new special variables.
+
 2005-10-26  Paul Smith  <psmith@gnu.org>
 
 	* read.c (record_files): Don't set deps flags if there are no deps.
